# rust-aries-agent

./: .gitignore  CODEOWNERS  README.md  Supported-RFC.md  docker-compose.yml
.circleci/: config.yml
agency/: Cargo.toml  README.md
agency/src/: AgencyProtocol.rs  lib.rs
agent/: Cargo.toml  README.md
agent/src/: AgentProtocol.rs  lib.rs
docker/: ubuntu.dockerfile
docs/: DEVELOPER_DOCUMENTATION.md  ORDER_OF_WORK.md  RESOURCES.md  Supported-RFC.md  USING.md
host/: Cargo.toml  README.md
host/src/: config.yml  hosting.rs  main.rs  router.rs
shared/: Cargo.toml  README.md
shared/src/: Automation.rs  Locale.rs  ProtocolTrait.rs  TalkBack.rs  lib.rs  protocol_trait.rs
shared/src/Crypto/: mod.rs
shared/src/Messaging/: BasicMessageImpl.rs  CreateInvitationResponseImpl.rs  Enums.rs  InvitationImpl.rs  Parameters.rs  ReceiveInvitationResponseImpl.rs  mod.rs
shared/src/ProtocolMessages/: BasicMessage.rs  CreateInvitationResponseImpl.rs  InvitationImpl.rs  mod.rs
shared/src/Wallets/: BasicWalletImpl.rs  IndyWalletImpl.rs  Records.rs  WalletFactory.rs  WalletTrait.rs  mod.rs
tools/: README.md  env.cmd  indy_wallet_cfg.json  runhost-indy.cmd  runhost-indy.sh  runhost.cmd  runhost.sh
tools/webhook/: Cargo.toml  README.md
tools/webhook/src/: main.rs
