[package]
name = "aries-agency"
version = "0.1.0"
authors = ["tatmanblue <Matt.Raffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# keep our projects first and follow with imported crates in alphabetical order
[dependencies]
# our share project
aries-shared = { path = "../shared" }

log = "0.4.14"