[package]
name = "host"
version = "0.1.0"
authors = ["tatmanblue <Matt.Raffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# keep our projects first and follow with imported crates in alphabetical order
[dependencies]
# our agency project
aries-agency = { path = "../agency" }
# our agent project
aries-agent = { path = "../agent" }
# our share project
aries-shared = { path = "../shared" }

clap = {version = "2.33.1", features = ["yaml"]}
http = "0.2.1"
serde = "1.0.114"
serde_derive = "1.0.114"
tide = "0.13.0"
tokio = "0.2.22"
