[package]
name = "host"
version = "0.1.0"
authors = ["tatmanblue <Matt.Raffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# keep our projects first and follow with imported crates in alphabetical order
[dependencies]
# our agency project
aries-agency = { path = "../agency" }
# our agent project
aries-agent = { path = "../agent" }
# our share project
aries-shared = { path = "../shared" }

clap = {version = "2.33.3", features = ["yaml"]}
env_logger = "0.8.3"
futures-util = "0.3.13"
http = "0.2.3"
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.7.2"
serde = "1.0.124"
serde_derive = "1.0.124"
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }

