[package]
name = "aries-shared"
version = "0.1.0"
authors = ["tatmanblue <Matt.Raffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# keep these in alphabetical order
[dependencies]
chrono = {version = "0.4.13", features = ["serde"]}
lazy_static = "1.4.0"
log = "0.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rust-base58 = "0.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sodiumoxide = "0.2.6"
uuid = {version = "0.8.1", features = ["serde", "v4"] }