[package]
name = "aries-shared"
version = "0.1.0"
authors = ["tatmanblue <Matt.Raffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# keep these in alphabetical order
[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
indy = "1.6.7"
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
rust-base58 = "0.0.4"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
sodiumoxide = "0.2.6"
uuid = {version = "0.8.2", features = ["serde", "v4"] }