[package]
name = "webhook"
version = "0.1.0"
authors = ["tatmanblue <Matt.Raffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
tide = "0.13.0"
tokio = "0.2.22"